--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,12 @@ header i {
   font-size: 0.8rem;
 }
 
+@media (max-width: 640px) {
+  .card {
+    flex-direction: column;
+  }
+}
+
 .photo {
   width: 225px;
   height: 268px;
@@ -56,6 +62,14 @@ header i {
   display: inline-block;
   margin-right: 20px;
   border-radius: 5px;
+}
+
+@media (max-width: 640px) {
+  .photo {
+    width: 100%;
+    height: 180px;
+    margin: 0 auto 15px;
+  }
 }
 
 .map-section {
